[package]
name = "merkle_tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "merkle"
path = "./bin/main.rs"


[dependencies]
bincode = { version = "1.3.3", default-features = false }
crossbeam-queue = "0.3.12"
dhat = { version = "0.3.3", default-features = false, optional = true }
fjall = { version = "2.11.0" }
hex = "0.4.3"
indexmap = "2.9.0"
itertools = "0.14.0"
rayon = "1.10.0"
rocksdb = { version = "0.23.0", default-features = false, features = [
  "snappy",
] }
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.1"
sled = { version = "0.34.7" }
tempfile = "3.20.0"
[profile.release]
debug = 1

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }
rand = "0.9.1"
merkle = '1.11.0'
ring = "0.16.15"

[[bench]]
name = 'stores'
harness = false
[[bench]]
name = 'generic'
harness = false
[features]
dhat-heap = ["dep:dhat"]
