[package]
name = "merkle_tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "merkle"
path = "./bin/main.rs"


[dependencies]
bincode = { version = "1.3.3", default-features = false, optional = true }
blake3 = { version = "1.8.2", features = ["digest"], optional = true }
crossbeam-queue = { version = "0.3.12" }
dhat = { version = "0.3.3", default-features = false, optional = true }
fjall = { version = "2.11.0", default-features = false, optional = true }
hex = "0.4.3"
indexmap = "2.9.0"
itertools = "0.14.0"
rayon = "1.10.0"
rocksdb = { version = "0.23.0", default-features = false, features = [
  "snappy",
], optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }
sha1 = { version = "0.10.6", optional = true }
sha2 = { version = "0.10.1", optional = true }
sled = { version = "0.34.7", default-features = false, optional = true }
tempfile = { version = "3.20.0", optional = true }
[profile.release]
debug = 1

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }
rand = "0.9.1"
merkle = '1.11.0'
ring = "0.16.15"

[[bench]]
name = 'stores'
harness = false
required-features = ["all-stores"]
[[bench]]
name = 'generic'
harness = false
[features]
default = ["sha2"]
sha2 = ["dep:sha2"]
sha1 = ["dep:sha1"]

all-stores = ["sled", "rocksdb", "fjall"]
dhat-heap = ["dep:dhat"]
sled = ["dep:bincode", "dep:sled", "dep:tempfile", "dep:serde"]
rocksdb = ["dep:bincode", "dep:rocksdb", "dep:tempfile", "dep:serde"]
fjall = ["dep:bincode", "dep:fjall", "dep:tempfile", "dep:serde"]
